APIs/googleapis.com/tpu/v2/python-client/README.md
# openapi-client
TPU API provides customers with access to Google TPU technology.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://tpu.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://tpu.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.ProjectsApi(api_client)
    parent = 'parent_example' # str | Required. The parent resource name.
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    filter = 'filter_example' # str | List filter. (optional)
    order_by = 'order_by_example' # str | Sort results. (optional)
    page_size = 56 # int | The maximum number of items to return. (optional)
    page_token = 'page_token_example' # str | The next_page_token value returned from a previous List request, if any. (optional)

    try:
        api_response = api_instance.tpu_projects_locations_accelerator_types_list(parent, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, filter=filter, order_by=order_by, page_size=page_size, page_token=page_token)
        print("The response of ProjectsApi->tpu_projects_locations_accelerator_types_list:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling ProjectsApi->tpu_projects_locations_accelerator_types_list: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://tpu.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ProjectsApi* | [**tpu_projects_locations_accelerator_types_list**](docs/ProjectsApi.md#tpu_projects_locations_accelerator_types_list) | **GET** /v2/{parent}/acceleratorTypes | 
*ProjectsApi* | [**tpu_projects_locations_generate_service_identity**](docs/ProjectsApi.md#tpu_projects_locations_generate_service_identity) | **POST** /v2/{parent}:generateServiceIdentity | 
*ProjectsApi* | [**tpu_projects_locations_list**](docs/ProjectsApi.md#tpu_projects_locations_list) | **GET** /v2/{name}/locations | 
*ProjectsApi* | [**tpu_projects_locations_nodes_create**](docs/ProjectsApi.md#tpu_projects_locations_nodes_create) | **POST** /v2/{parent}/nodes | 
*ProjectsApi* | [**tpu_projects_locations_nodes_get_guest_attributes**](docs/ProjectsApi.md#tpu_projects_locations_nodes_get_guest_attributes) | **POST** /v2/{name}:getGuestAttributes | 
*ProjectsApi* | [**tpu_projects_locations_nodes_list**](docs/ProjectsApi.md#tpu_projects_locations_nodes_list) | **GET** /v2/{parent}/nodes | 
*ProjectsApi* | [**tpu_projects_locations_nodes_patch**](docs/ProjectsApi.md#tpu_projects_locations_nodes_patch) | **PATCH** /v2/{name} | 
*ProjectsApi* | [**tpu_projects_locations_nodes_start**](docs/ProjectsApi.md#tpu_projects_locations_nodes_start) | **POST** /v2/{name}:start | 
*ProjectsApi* | [**tpu_projects_locations_nodes_stop**](docs/ProjectsApi.md#tpu_projects_locations_nodes_stop) | **POST** /v2/{name}:stop | 
*ProjectsApi* | [**tpu_projects_locations_operations_cancel**](docs/ProjectsApi.md#tpu_projects_locations_operations_cancel) | **POST** /v2/{name}:cancel | 
*ProjectsApi* | [**tpu_projects_locations_operations_list**](docs/ProjectsApi.md#tpu_projects_locations_operations_list) | **GET** /v2/{name}/operations | 
*ProjectsApi* | [**tpu_projects_locations_queued_resources_create**](docs/ProjectsApi.md#tpu_projects_locations_queued_resources_create) | **POST** /v2/{parent}/queuedResources | 
*ProjectsApi* | [**tpu_projects_locations_queued_resources_delete**](docs/ProjectsApi.md#tpu_projects_locations_queued_resources_delete) | **DELETE** /v2/{name} | 
*ProjectsApi* | [**tpu_projects_locations_queued_resources_list**](docs/ProjectsApi.md#tpu_projects_locations_queued_resources_list) | **GET** /v2/{parent}/queuedResources | 
*ProjectsApi* | [**tpu_projects_locations_queued_resources_reset**](docs/ProjectsApi.md#tpu_projects_locations_queued_resources_reset) | **POST** /v2/{name}:reset | 
*ProjectsApi* | [**tpu_projects_locations_runtime_versions_get**](docs/ProjectsApi.md#tpu_projects_locations_runtime_versions_get) | **GET** /v2/{name} | 
*ProjectsApi* | [**tpu_projects_locations_runtime_versions_list**](docs/ProjectsApi.md#tpu_projects_locations_runtime_versions_list) | **GET** /v2/{parent}/runtimeVersions | 


## Documentation For Models

 - [AcceleratorConfig](docs/AcceleratorConfig.md)
 - [AcceleratorType](docs/AcceleratorType.md)
 - [AccessConfig](docs/AccessConfig.md)
 - [AttachedDisk](docs/AttachedDisk.md)
 - [FailedData](docs/FailedData.md)
 - [GenerateServiceIdentityResponse](docs/GenerateServiceIdentityResponse.md)
 - [GetGuestAttributesRequest](docs/GetGuestAttributesRequest.md)
 - [GetGuestAttributesResponse](docs/GetGuestAttributesResponse.md)
 - [Guaranteed](docs/Guaranteed.md)
 - [GuestAttributes](docs/GuestAttributes.md)
 - [GuestAttributesEntry](docs/GuestAttributesEntry.md)
 - [GuestAttributesValue](docs/GuestAttributesValue.md)
 - [Interval](docs/Interval.md)
 - [ListAcceleratorTypesResponse](docs/ListAcceleratorTypesResponse.md)
 - [ListLocationsResponse](docs/ListLocationsResponse.md)
 - [ListNodesResponse](docs/ListNodesResponse.md)
 - [ListOperationsResponse](docs/ListOperationsResponse.md)
 - [ListQueuedResourcesResponse](docs/ListQueuedResourcesResponse.md)
 - [ListRuntimeVersionsResponse](docs/ListRuntimeVersionsResponse.md)
 - [Location](docs/Location.md)
 - [MultisliceParams](docs/MultisliceParams.md)
 - [NetworkConfig](docs/NetworkConfig.md)
 - [NetworkEndpoint](docs/NetworkEndpoint.md)
 - [Node](docs/Node.md)
 - [NodeSpec](docs/NodeSpec.md)
 - [Operation](docs/Operation.md)
 - [OperationMetadata](docs/OperationMetadata.md)
 - [QueuedResource](docs/QueuedResource.md)
 - [QueuedResourceState](docs/QueuedResourceState.md)
 - [QueueingPolicy](docs/QueueingPolicy.md)
 - [RuntimeVersion](docs/RuntimeVersion.md)
 - [SchedulingConfig](docs/SchedulingConfig.md)
 - [ServiceAccount](docs/ServiceAccount.md)
 - [ServiceIdentity](docs/ServiceIdentity.md)
 - [ShieldedInstanceConfig](docs/ShieldedInstanceConfig.md)
 - [Status](docs/Status.md)
 - [Symptom](docs/Symptom.md)
 - [Tpu](docs/Tpu.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.


## Author




